--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -9,10 +9,6 @@
         path: .vim/.vimrc
         relink: true
         create: true
-    ~/.gnupg:
-        path: .gnupg/
-        relink: true
-        create: true
     ~/.vim:
         path: .vim/
         relink: true
@@ -29,6 +25,10 @@
         path: .bin/
         relink: true
         create: true
+    # ~/.gnupg:
+    #     path: .gnupg/
+    #     relink: true
+    #     create: true
 - shell:
   -
     command: sh ./script/update-git-submodules
